Fixed O31 entry in Stevens table in documents.

--- a/doc/stevens.tex
+++ b/doc/stevens.tex
@@ -16,9 +16,9 @@ O_{22}&=&\frac{1}{2}[J_+^2+J_-^2]=J_x^2-J_y^2 \\
 \hline
 O^s_{33}&=&\frac{-i}{2}[J_+^3-J_-^3] \\
 O^s_{32}&=&\frac{-i}{4}[(J_+^2-J_-^2)J_z+J_z(J_+^2-J_-^2)] \\
-O^s_{31}&=&\frac{-i}{4}[(J_+-J_-)(5J_z^2-X-1/2)+(J_+-J_-)(5J_z^2-X-1/2)(J_+-J_-)] \\
+O^s_{31}&=&\frac{-i}{4}[(J_+-J_-)(5J_z^2-X-1/2)+(5J_z^2-X-1/2)(J_+-J_-)] \\
 O_{30}&=&[5J_z^3-(3X-1)J_z] \\
-O_{31}&=&\frac{1}{4}[(J_++J_-)(10J_z^2-2X-1)+(5J_z^2-X-1/2)(J_++J_-)] \\
+O_{31}&=&\frac{1}{4}[(J_++J_-)(5J_z^2-X-1/2)+(5J_z^2-X-1/2)(J_++J_-)] \\
 O_{32}&=&\frac{1}{4}[(J_+^2+J_-^2)J_z+J_z(J_+^2+J_-^2)] \\
 O_{33}&=&\frac{1}{2}[J_+^3+J_-^3] \\
 \hline
