--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -66,10 +66,11 @@ community this program would not have come into existence.
 
 \section*{What is New ?}
 
-\subsection*{... in version 3.8 ...}
+\subsection*{... in version 3.8/3.9 ...}
 
 {\prg mcdiff}\index{mcdiff} has been extended to be able to output real and imaginary parts of nuclear and
-magnetic structure factors. This is convenient for the analysis of polarized neutron diffraction experiments.
+magnetic structure factors and flipping ratios. This is convenient for the analysis of polarized neutron diffraction experiments.
+
 
 \subsection*{... in version 3.7 ... }
 
