--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -238,6 +238,9 @@ N4=3 XI4=2.74850 C4=0.49771
 N5=3 XI5=1.69027 C5=0.11388 
 \end{verbatim}
 }
+
+The radial wavefunction may be calculated numerically using the program {\prg radwavfunc}\index{radwavfunc}.
+
 \subsection{Radial Matrix Elements}
 
 For the program {\prg pointc} alternatively, the radial matrix elements can be given:
