--- a/doc/ffacts.tex
+++ b/doc/ffacts.tex
@@ -1,5 +1,7 @@
 \section{Magnetic Form factors for Neutrons}\label{ffacts}
 
+Using the program {\prg formfactor} the magnetic formfactors for neutrons
+can be evaluated.
 Neutron form factors are a function of the scattering vector
 $\mbf Q$ and expressed in terms of expectation values
 of spherical Bessel functions $j_l(|\mbf Q|r)$ defined as 
