added comments to manual

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -66,6 +66,12 @@ community this program would not have come into existence.
 
 \section*{What is New ?}
 
+\subsection*{... in version 4.0 ...}
+
+- neutron magnetic formfactors (j0,j2,j4,j6)  are now calculated directly from the radial wavefunction instead of the 
+formfactor parameters. New programs formfactor and radwavfunc to evaluate formfactors and radial wave functions.
+some bugs for ic1ion d9 configuration removed
+
 \subsection*{... in version 3.8/3.9 ...}
 
 {\prg mcdiff}\index{mcdiff} has been extended to be able to output real and imaginary parts of nuclear and
