--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -12,6 +12,10 @@
 \newcommand{\V}[1]{ \stackrel{=}{\mathbf #1}}
 \newcommand{\prg}{\sl}
 \newcommand{\use}[1]{\vspace{0.5cm} Usage: {\prg{ #1}} \vspace{0.5cm}}
+\newcommand{\bra}[1]{\langle #1|}
+\newcommand{\ket}[1]{|#1\rangle}
+\newcommand{\threej}[2]{\left( \begin{array}{ccc} #1 \\ #2 \end{array} \right)}
+\newcommand{\sixj}[2]{\left\{ \begin{array}{ccc} #1 \\ #2 \end{array} \right\}}
 
 \begin{document}
 
